--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- font awesome style  -->
     <script src="https://kit.fontawesome.com/652709dd55.js" crossorigin="anonymous"></script>
     <!-- style css link -->
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
