--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- body section  -->
         <section class="body-container">
             <div class="side-menu">
-                <a class="side-menu-item" href="upcoming.html">Upcoming Match</a>
+                <a class="side-menu-item" href="fixture.html">Upcoming Match</a>
                 <a class="side-menu-item" href="">All Group</a>
                 <a class="side-menu-item active-link" href="index.html">Blog</a>
             </div>
